# naivesat

./: .gitignore  Cargo.toml  README.md  benchmarks.txt
src/: greedysatostop.rs  main.rs  qsat.rs  satostop.rs
