[package]
name = "naivesat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "naivesat"
path = "src/main.rs"

[[bin]]
name = "naiveqsat"
path = "src/qsat.rs"

[[bin]]
name = "naivesatostop"
path = "src/satostop.rs"

[[bin]]
name = "greedysatostop"
path = "src/greedysatostop.rs"

[dependencies]
gatesim = { path="../gatesim", version="0.1.0" }
gatenative = { path="../gatenative", version="0.1.0" }
opencl3 = "0.9"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.0"
