[package]
name = "naivesat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "naivesat"
path = "src/main.rs"

[[bin]]
name = "naiveqsat"
path = "src/qsat.rs"

[[bin]]
name = "naivesatostop"
path = "src/satostop.rs"

[[bin]]
name = "greedysatostop"
path = "src/greedysatostop.rs"

[dependencies]
gatesim = { path="../gatesim", version="0.1.0" }
gatenative = { path="../gatenative", version="0.1.0" }
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.0"

[dev-dependencies]
gategen = { path="../gategen", version="0.1.0" }
gateutil = { path="../gateutil", version="0.1.0" }
