[package]
name = "naivesat"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.3"
edition = "2021"
description = "Few solvers that uses the Gate project."
repository = "https://github.com/matszpk/naivesat"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[[bin]]
name = "naivesat"
path = "src/main.rs"

[[bin]]
name = "naiveqsat"
path = "src/qsat.rs"

[[bin]]
name = "naivesatostop"
path = "src/satostop.rs"

[[bin]]
name = "greedysatostop"
path = "src/greedysatostop.rs"

[dependencies]
gatenative = "0.2.0"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.0"

[dev-dependencies]
gategen = "0.2.0"
